examples/test/testpolicy3129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3129
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key37: value25
      key26: value43
      key3: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value17
          key3: value13
          key8: value25
      podSelector:
        matchLabels:
          key35: value32
          key12: value17
          key10: value17
